added mysql+redis & mongodb+redis Database implementation
